# bg-coor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: simple_usage.rs  simple_usage_redis.rs
examples/yara_scan/: Cargo.toml
examples/yara_scan/src/: main.rs
src/: lib.rs  task_manager.rs
src/broker/: memory.rs  mod.rs  redis.rs  traits.rs
src/core/: error.rs  mod.rs  task.rs
src/storage/: memory.rs  mod.rs  redis.rs  traits.rs
src/worker/: executor.rs  mod.rs  pool.rs  registry.rs
tests/: broker_inmem_tests.rs  broker_tests.rs  core_tests.rs  inmem_tests.rs  storage_test.rs  worker_tests.rs
