[package]
name = "bg-coor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.7"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
redis = { version = "0.23", features = ["tokio-comp"] }